2004-05-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-spiegel.el (shimbun-rss-build-message-id): Use
	shimbun-replace-in-string instead of replace-regexp-in-string.

2004-05-08  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmoslove.el: Removed it since contents would not be
	updated anymore.

2004-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-emacswiki.el (shimbun-emacswiki-groups): Add `changes'.
	(shimbun-get-headers): Rewrite articles' URLs only when the
	current group is `diff'.

	* shimbun/sb-heise.el (shimbun-heise-get-newsticker-headers):
	(shimbun-heise-get-telepolis-headers): Takes an argument
	`shimbun', to suppress byte-compile warnings.
	(shimbun-get-headers): Follow the above changes.

2004-05-07  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-emacswiki.el:
	* shimbun/sb-heise.el:
	* shimbun/sb-spiegel.el: New files.

	* shimbun/sb-bbc.el (shimbun-bbc-content-start): Relaxed.

2004-05-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-atmarkit.el (shimbun-atmarkit-content-end): Updated
	to follow the change of the site design.

	* shimbun/shimbun.el (shimbun-index-url): Define its default
	method.

	* shimbun/sb-bbc.el (shimbun-index-url)
	* shimbun/sb-coldsync.el (shimbun-index-url)
	* shimbun/sb-dennou.el (shimbun-index-url)
	* shimbun/sb-digiko.el (shimbun-index-url)
	* shimbun/sb-fml.el (shimbun-index-url)
	* shimbun/sb-javaconf.el (shimbun-index-url)
	* shimbun/sb-jpilot.el (shimbun-index-url)
	* shimbun/sb-muchy.el (shimbun-index-url)
	* shimbun/sb-pilot-mailsync.el (shimbun-index-url)
	* shimbun/sb-pocketgames.el (shimbun-index-url)
	* shimbun/sb-sml.el (shimbun-index-url)
	* shimbun/sb-squeak-dev.el (shimbun-index-url)
	* shimbun/sb-squeak-ja.el (shimbun-index-url)
	* shimbun/sb-texfaq.el (shimbun-index-url)
	* shimbun/sb-wincefan.el (shimbun-index-url): Abolished.

2004-05-05  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-rss.el (shimbun-get-headers): Use the <dc:contributor>