@@ -1,3 +1,8 @@
+2004-05-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (w3m-copy-buffer): Prefer cached contents without
+	checking their validity.
+
 2004-05-09  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-spiegel.el (shimbun-rss-build-message-id): Use
